--- a/sources/FMXClient/MainMobileAppV2.Windows.fmx
+++ b/sources/FMXClient/MainMobileAppV2.Windows.fmx
@@ -1,72 +1,47 @@
 inherited MainForm_Windows: TMainForm_Windows
   DesignerMasterStyle = 2
   inherited TabControl: TTabControl
-    TabIndex = 1
+    Size.Width = 483.000000000000000000
     inherited TabItemListNotes: TTabItem
-      IsSelected = False
-      Size.Width = 112.000000000000000000
+      Size.Width = 111.000000000000000000
       ExplicitSize.cx = 237.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
-      inherited ToolBar2: TToolBar
-        Position.Y = 6.000000000000000000
-        Size.Width = 50.000000000000000000
-        inherited cmdAddNote: TSpeedButton
-          Position.X = 1.000000000000000000
-        end
-      end
-      inherited ToolBarMain: TToolBar
-        Size.Width = 50.000000000000000000
-        inherited lblTitle: TLabel
-          Size.Width = -22.000000000000000000
-        end
-        inherited cmdSend: TButton
-          Position.X = -22.000000000000000000
-        end
-      end
-      inherited lvNotes: TListView
-        Size.Width = 50.000000000000000000
-        Size.Height = 0.000000000000000000
-      end
     end
     inherited TabItemTakeNote: TTabItem
-      IsSelected = True
-      Size.Width = 114.000000000000000000
+      Size.Width = 112.000000000000000000
       ExplicitSize.cx = 68.000000000000000000
       ExplicitSize.cy = 26.000000000000000000
       inherited LayoutNote: TLayout
-        Size.Width = 417.000000000000000000
+        Size.Width = 473.000000000000000000
         inherited txtNote: TEdit
-          Size.Width = 335.000000000000000000
+          Size.Width = 391.000000000000000000
+          Size.Height = 30.000000000000000000
         end
       end
       inherited LayoutPhoto: TLayout
-        Size.Width = 417.000000000000000000
-        Size.Height = 413.000000000000000000
+        Size.Width = 473.000000000000000000
         inherited ImCaptured: TImage
-          Size.Width = 367.000000000000000000
-          Size.Height = 353.000000000000000000
+          Size.Width = 423.000000000000000000
         end
         inherited Layout1: TLayout
-          Position.Y = 353.000000000000000000
-          Size.Width = 417.000000000000000000
+          Size.Width = 473.000000000000000000
           inherited Button1: TButton
-            Position.X = 329.000000000000000000
+            Position.X = 385.000000000000000000
             Size.Height = 50.000000000000000000
           end
           inherited Button2: TButton
-            Position.X = 373.000000000000000000
+            Position.X = 429.000000000000000000
             Size.Height = 50.000000000000000000
           end
           inherited Button3: TButton
-            Position.X = 285.000000000000000000
+            Position.X = 341.000000000000000000
+            Size.Height = 50.000000000000000000
+          end
+          inherited Edit1: TEdit
             Size.Height = 50.000000000000000000
           end
         end
         inherited Layout3: TLayout
-          Size.Height = 353.000000000000000000
-          inherited lblPhoto: TLabel
-            Size.Height = 353.000000000000000000
-          end
           inherited SpeedButton1: TSpeedButton
             Size.Height = 353.000000000000000000
           end
@@ -76,28 +51,27 @@ inherited MainForm_Windows: TMainForm_Windows
         end
       end
       inherited LayoutClient: TLayout
-        Size.Width = 417.000000000000000000
+        Size.Width = 473.000000000000000000
         inherited lblNomClientSelectionne: TLabel
-          Size.Width = 291.000000000000000000
+          Size.Width = 347.000000000000000000
         end
         inherited cmdSelectNoteClient: TSpeedButton
-          Position.X = 373.000000000000000000
+          Position.X = 429.000000000000000000
           Size.Height = 34.000000000000000000
         end
       end
       inherited ToolBar1: TToolBar
-        Size.Width = 427.000000000000000000
+        Size.Width = 483.000000000000000000
         inherited cmdTakeNoteOK: TSpeedButton
-          Position.X = 371.000000000000000000
+          Position.X = 427.000000000000000000
         end
       end
       inherited ToolBarDeleteNote: TToolBar
-        Position.Y = 564.000000000000000000
-        Size.Width = 427.000000000000000000
+        Size.Width = 483.000000000000000000
       end
     end
     inherited TabItemClients: TTabItem
-      Size.Width = 99.000000000000000000
+      Size.Width = 97.000000000000000000
       ExplicitSize.cx = 100.000000000000000000
       ExplicitSize.cy = 26.000000000000000000
       inherited ToolBar6: TToolBar
@@ -116,7 +90,7 @@ inherited MainForm_Windows: TMainForm_Windows
       end
     end
     inherited TabItemServeur: TTabItem
-      Size.Width = 104.000000000000000000
+      Size.Width = 102.000000000000000000
       ExplicitSize.cx = 87.000000000000000000
       ExplicitSize.cy = 49.000000000000000000
       inherited ToolBar8: TToolBar
@@ -131,29 +105,45 @@ inherited MainForm_Windows: TMainForm_Windows
     end
   end
   inherited MultiView1: TMultiView
+    Size.Width = 201.000000000000000000
     inherited Layout2: TLayout
+      Size.Width = 190.000000000000000000
+      inherited Label2: TLabel
+        Size.Width = 141.000000000000000000
+      end
       inherited BtRefresh: TButton
+        Position.X = 146.000000000000000000
         Size.Height = 65.000000000000000000
+      end
+      inherited lblConnection: TLabel
+        Size.Width = 141.000000000000000000
       end
     end
     inherited ListBox1: TListBox
+      Size.Width = 200.000000000000000000
       ItemHeight = 60.000000000000000000
-      Viewport.Width = 252.000000000000000000
+      Viewport.Width = 196.000000000000000000
       Viewport.Height = 588.000000000000000000
       inherited lbiStatusServer: TListBoxItem
-        Size.Width = 252.000000000000000000
+        Size.Width = 196.000000000000000000
         Size.Height = 60.000000000000000000
         Size.PlatformDefault = False
       end
       inherited ListBoxItem2: TListBoxItem
         Position.Y = 60.000000000000000000
-        Size.Width = 252.000000000000000000
+        Size.Width = 196.000000000000000000
         Size.Height = 60.000000000000000000
         Size.PlatformDefault = False
       end
       inherited ListBoxItem3: TListBoxItem
         Position.Y = 120.000000000000000000
-        Size.Width = 252.000000000000000000
+        Size.Width = 196.000000000000000000
+        Size.Height = 60.000000000000000000
+        Size.PlatformDefault = False
+      end
+      inherited ListBoxItem1: TListBoxItem
+        Position.Y = 180.000000000000000000
+        Size.Width = 196.000000000000000000
         Size.Height = 60.000000000000000000
         Size.PlatformDefault = False
       end
